@@ -70,6 +70,9 @@ Core and Builtins
 Library
 -------
 
+- Issue #11277: mmap.mmap() calls fcntl(fd, F_FULLFSYNC) on Mac OS X to get
+  around a mmap bug with sparse files. Patch written by Steffen Daode Nurpmeso.
+
 - Issue #10761: Fix tarfile.extractall failure  when symlinked files are
   present. Initial patch by Scott Leerssen.
 
